--- a/style.css
+++ b/style.css
@@ -1,19 +1,35 @@
 body {
   background-color: #B4D2ED;
-  margin-top: 15%;
+  margin-top: 10%;
 }
 
 h1 {
   font-family: 'Questrial';
-  font-size: 34pt;
+  font-size: 5.5vh;
   color: white;
   text-align: center;
 }
 
+h2 {
+  font-family: 'Questrial';
+  font-size: 2.5vh;
+}
+
+ul {
+  margin-top: 0;
+  margin-left: 0;
+  padding-left: 3%;
+}
+
 .content {
 	font-family: 'Lato';
-	font-size: 14pt;
+	font-size: 2.5vh;
 	color: #4D4D4D;
 	width: 45%;
 	margin: auto;
+}
+
+.note {
+  font-size: 1.75vh;
+  margin-top: 2%;
 }
