--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@ body {
 
 h1 {
   font-family: 'Questrial';
-  font-size: 5.5vh;
+  font-size: 5vh;
   color: white;
   text-align: center;
+  margin-bottom: 0%;
 }
 
 h2 {
-  font-family: 'Questrial';
-  font-size: 2.5vh;
+  font-size: 1.75vh;
+  color: #606060;
+  text-align: center;
 }
 
 ul {
@@ -23,13 +25,33 @@ ul {
 
 .content {
 	font-family: 'Lato';
-	font-size: 2.5vh;
+	font-size: 2.25vh;
 	color: #4D4D4D;
-	width: 45%;
+	width: 40%;
 	margin: auto;
 }
 
 .note {
   font-size: 1.75vh;
   margin-top: 2%;
+}
+
+
+@media screen and (max-width: 1000px) {
+  body {
+    margin-top: 15%;
+  }
+
+  h1 {
+    font-size: 4.5vh;
+  }
+
+  .content {
+    width: 70%;
+    font-size: 2vh;
+  }
+
+  .note {
+    margin-top: 5%;
+  }
 }
